# day-note-metric-calendar-qt-qml-cpp

./: .gitignore  CMakeLists.txt  Main_копия.qml  README.md  main.cpp
controller/: controller.cpp  controller.h  databasemanager.cpp  databasemanager.h
model/: metrics.cpp  metrics.h
src/: main.cpp
src/controller/: controller.cpp  controller.h  databasemanager.h
src/model/: day.cpp  day.h  model.cpp  model.h  note.h
src/view/: MainWindow.qml  MyChart.qml  MyNote_копия_рабочая.qml  main_window.qml
src/view/calendar/: MyDay.qml  MyMonth.qml  MyYear.qml
src/view/metric/: MetricCard.qml  MetricInput.qml  MetricList.qml
src/view/note/: MyNote.qml  NoteInput.qml  NotesList.qml
